--- a/resources/layouts/layout.xml
+++ b/resources/layouts/layout.xml
@@ -1,10 +1,16 @@
 <layout id="WatchFace">
-    <label id="BatteryLabel" font="@Fonts.textFont" />
     <label id="DateLabel" font="@Fonts.textFont" />
     <label id="DayNumberLabel" font="@Fonts.bigNumberFont" />
+    <label id="Field1Icon" font="@Fonts.iconFont" />
+    <label id="Field1Label" font="@Fonts.textFont" />
+    <label id="Field2Icon" font="@Fonts.iconFont" />
+    <label id="Field2Label" font="@Fonts.textFont" />
+    <label id="Field3Icon" font="@Fonts.iconFont" />
+    <label id="Field3Label" font="@Fonts.textFont" />
+    <!-- <label id="StepIcon" font="@Fonts.iconFont" />
     <label id="StepLabel" font="@Fonts.textFont" />
+    <label id="NotifIcon" font="@Fonts.iconFont" />
     <label id="NotifLabel" font="@Fonts.textFont" />
     <label id="BatteryIcon" font="@Fonts.iconFont" />
-    <label id="StepIcon" font="@Fonts.iconFont" />
-    <label id="NotifIcon" font="@Fonts.iconFont" />
+    <label id="BatteryLabel" font="@Fonts.textFont" /> -->
 </layout>
