Seconds in field 4 are oblique, weather improved

--- a/resources/layouts/layout.xml
+++ b/resources/layouts/layout.xml
@@ -8,7 +8,8 @@
     <label id="Field2Label" font="@Fonts.textFont" />
     <label id="Field3Icon" font="@Fonts.iconFont" />
     <label id="Field3Label" font="@Fonts.textFont" />
-    <label id="Field4Label" font="@Fonts.bigNumberEmptyFont" />
+    <label id="SecondTenthLabel" font="@Fonts.bigNumberFont" />
+    <label id="SecondUnitLabel" font="@Fonts.bigNumberFont" />
     <label id="WeatherIcon" font="@Fonts.weatherFont" />
     <label id="WeatherLabel" font="@Fonts.textFont" />
 </layout>
